# oh-memos

./: .env.bundle.example  .env.example  .env.windows.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  README_CN.md  WINDOWS_DEPLOY_CN.md  WINDOWS_README.md  findings.md  install_run.bat  install_run.ps1  mcp_optimization_findings.md  mcp_optimization_plan.md  progress.md  pyproject.toml  run.bat  setup_env.bat  task_plan.md  test_config.py
VENV_scripts/: IDE_CONFIG  README.md  setup_venv.bat  setup_venv.ps1  setup_venv.sh
config/: mcp-config.template.json  qdrant.yaml
docker/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
docs/: ASCII_DIAGRAM_GUIDE.md  CHANGELOG.md  DEPLOY_CN.md  DEPLOY_EN.md  ERROR_PATTERN_2026-01-25_HuggingFace_Qdrant_WSL.md  MCP_GUIDE.md  QUICKSTART_BUNDLE.md  README.md  VIDEO_SCRIPT_CN.md  WIN-Python-venv.md  (+3 more)
mcp-server/: README.md  api_client.py  config.py  cube_manager.py  formatters.py  install.py  keyword_enhancer.py  memory_analysis.py  memos_mcp_server.py  models.py  oh_memos_mcp_server.py  pyproject.toml  query_processing.py  run_mcp.sh  test_server.py  tools_registry.py
mcp-server/handlers/: __init__.py  admin.py  calendar.py  graph.py  memory.py  search.py  utils.py
oh-memos-cli/: README.md  pyproject.toml
oh-memos-cli/oh_memosctl/: __init__.py  __main__.py  calendar_cmd.py  cli.py  config.py  generators.py  init_wizard.py  mcp_launcher.py  service.py
oh-memos-cli/oh_memosctl/modes/: __init__.py  base.py  coding.py  student.py
oh-memos-cli/oh_memosctl/templates/: skill.md.j2
oh-memos-cli/tests/: __init__.py  test_calendar.py  test_config.py  test_generators.py  test_init_wizard.py  test_mcp_launcher.py  test_modes.py  test_service.py
(+815 files in other folders)
