[project]
name = "memos-mcp-server"
version = "0.1.1"
description = "MCP Server for MemOS - Intelligent Memory Management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
memos-mcp = "memos_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
